# jesse-trade

./: .env.example  .gitignore  .gitmodules  1. label_side.ipynb  1. labels.ipynb  2. features.ipynb  3. feature_selection.ipynb  4. models.ipynb  5. 置信度切片分析.ipynb  AGENTS.md  CLAUDE.md  LABELING_RESEARCH_REPORT.md  OPTUNA_USAGE.md  PD_2_bar_check.ipynb  Resample_Line_X.ipynb  backtest.py  backtest_no_jesse.py  backtest_tuning.ipynb  backtest_vectorized_no_jesse.py  bar_deap_research.ipynb  bar_entropy_research.ipynb  bar_gp_research.ipynb  bar_pysr_research.ipynb  bar_research.ipynb  candles.ipynb  check_labeling.ipynb  check_model_finding_pipeline.ipynb  check_tuning_pipeline.ipynb  confidence_slices.py  cython_setup.sh  dollar_bar_test.ipynb  entropy_bar_research.ipynb  environment-dev.yml  environment.yml  feature_selection.ipynb  features.ipynb  gp_draft.txt  install.sh  knowledge.md  label.ipynb  (+23 more)
archive/: bar_entropy_research.ipynb  bar_gp_research.ipynb  bar_research.ipynb
bar/: build.py  entropy_bar_v2.py
bar_research/: style_gplearn.py  style_pysr.py  style_pysr_optimized.py  symbolic_regression_deap.py  symbolic_regression_deap_advanced.py  test_dynamic_memory_optimization.py  test_memory_optimized_sr.py  test_symbolic_regression.py  todo.md
custom_indicators/: __init__.py  _example.py  accumulated_swing_index.py  adaptive_bandpass.py  adaptive_cci.py  adaptive_rsi.py  adaptive_stochastic.py  all_features copy.py  all_features.py  autocorrelation.py  autocorrelation_periodogram.py  autocorrelation_reversals.py  bollinger_modified.py  comb_sepctrum.py  comb_spectrum.py  config.py  convolution.py  decycler_oscillator.py  dft.py  ehlers_early_onset_trend.py  evenbetter_sinewave.py  ewo.py  feature_info.json  features_15m.py  features_1m.py  features_3m.py  features_main.py  hilbert_transformer_indicator.py  hurst.py  mod_rsi.py  mod_stochastic.py  model.py  mrmr_accelerated.py  roofing_filter.py  selection.py  swamicharts_rsi.py  swamicharts_stochastic.py  td_sequential.py
data/: features_res.json  meta_features_FCQSelector.json  meta_features_MRMR.json  meta_features_RFCQSelector.json  meta_features_res.json  mrmr_meta_features.json  mrmr_side_features.json  pysr_loss.jl  side_features_FCQSelector.json  side_features_MRMR.json  (+3 more)
rust_indicators/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RIPSER_ALGORITHM.md  pyproject.toml
rust_indicators/benches/: nrbo_bench.rs  ripser_benches.rs  vmd_bench.rs
rust_indicators/benches/ripser/: bench_binomial.py
rust_indicators/pyrs_indicators/: __init__.py  _core.py
rust_indicators/pyrs_indicators/ind_decomposition/: __init__.py  vmd.py
rust_indicators/pyrs_indicators/ind_trend/: __init__.py  fti.py
rust_indicators/pyrs_indicators/ind_wavelets/: __init__.py  cwt.py
rust_indicators/pyrs_indicators/topology/: README.md  __init__.py  ripser.py
rust_indicators/python/: __init__.py  nrbo.py  vmd.py
rust_indicators/scripts/: benchmark_performance.py  compare_with_python.py  generate_test_cases.py  run_rust_tests.py
rust_indicators/src/: fti.rs  lib.rs  nrbo.rs  vmd.rs
rust_indicators/src/cwt/: core.rs  ffi.rs  mod.rs  utils.rs  wavelets.rs
rust_indicators/src/fti/: core.rs  ffi.rs
rust_indicators/src/nrbo/: core.rs  ffi.rs
rust_indicators/src/ripser/: README.md  ffi.rs  mod.rs  types.rs
rust_indicators/src/ripser/core/: algorithm.rs  binomial.rs  cohomology.rs  distance.rs  mod.rs  simplex.rs
rust_indicators/src/vmd/: core.rs  ffi.rs  utils.rs
rust_indicators/tests/: test_cwt_correctness.py  test_fti_correctness.py  test_production_integration.py  test_ripser_integration.py  test_ripser_performance.py  test_vmd_correctness.py
rust_indicators/tests/ripser/: README.md  __init__.py  conftest.py  test_binomial.py  test_cohomology.py  test_distance.py  test_simplex.py
(+478 files in other folders)
