[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrs-indicators"
version = "0.5.0"
description = "High-performance Rust-powered technical indicators with Python interface"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.0",
]

[tool.maturin]
module-name = "pyrs_indicators._rust_indicators"  # Rust 扩展作为 pyrs_indicators 的子模块
bindings = "pyo3"
python-source = "."  # Python 包（pyrs_indicators/）位于项目根目录
features = ["pyo3/extension-module"]
